--- a/aula_10/index.html
+++ b/aula_10/index.html
@@ -12,8 +12,10 @@
 
     <div>
         <button onclick="changeImage()"> TROCAR IMAGEM</button>
-        <img src="scarlett_johansson.jpg" alt="imagem Xampp" id="myImage">
+        <img src="exercício/img_1.webp" alt="imagem Xampp" id="myImage">
     </div>
+
+
     
 
     <div>
